# lab-safety-system

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.integrated  README.md  deploy-quickstart.ps1  deploy-quickstart.sh  docker-compose.integrated.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.integrated.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
app/: __init__.py  api.py  config.py  main.py  models.py  schemas.py  security.py
docs/: backend-api.md  collaboration-guide.md  deployment.md
scripts/: pre-commit  verify_mcp.sh
src/: auth_settings.rs  backup.rs  cli.rs  config.rs  db.rs  main.rs  models.rs  route_analytics.rs  route_auth.rs  route_auth_support.rs  route_documents.rs  route_hazards.rs  route_invitations.rs  route_operations.rs  route_permissions.rs  route_settings.rs  route_support.rs  route_uploads.rs  route_users_labs.rs  routes.rs  routes_tests.rs  security.rs
src/routes/: analytics.rs  auth.rs  documents.rs  hazards.rs  invitations.rs  mcp.rs  mod.rs  operations.rs  settings.rs  users_labs.rs
src/routes_tests/: analytics_consistency_flow.rs  auth_provider_flow.rs  concurrency_flow.rs  detail_access_flow.rs  hazard_history_flow.rs  invitation_flow.rs  required_fields_flow.rs  role_membership_flow.rs  safety_flow.rs  safety_flow_assertions.rs  settings_flow.rs  training_scope_flow.rs  upload_flow.rs  upload_url_flow.rs  user_error_flow.rs
tests/: test_api.py
