[package]
name = "lab-safety-system"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart"] }
base64 = "0.22.1"
chacha20poly1305 = "0.11.0"
chrono = { version = "0.4.39", features = ["serde"] }
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v4"] }
webauthn-rs = "0.5.5"

[dev-dependencies]
tempfile = "3.15.0"
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
opt-level = 2
codegen-units = 1
strip = "symbols"
