[project]
name = "lab-safety-system"
version = "0.1.0"
description = "Backend for the Laboratory Safety Management Information System"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["frontend*"]

[project.optional-dependencies]
test = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
